styles/styles.css
/* body {
    background-color: #2D38B4
} */

.container{
    margin-top: 5%;
}

.btn-light:hover {
    color: black;
}

.hero-desc {
    font-size: 7vmin;
    font-weight: 700;
}

.services .container span {
    color: blueviolet;
}

.services-heading {
    padding-top: 10px;
}

.card {
    background-color: #2A34A2;
}

.about-img {
    width: 400px;
    height: 400px;
    border-radius: 10px;
}

.abt-h {
    font-weight: bold;
}

.abt-p {
    opacity: .8;
}

.contact-grid {
    padding-top: 10px;
}

.contact-grid p {
    margin-top: 5px;
    font-weight: 200;
}

#about-me .col {
    padding: 10px;
}


/* 1d2472 */

.services {
    background-color: #1d2472;
    color: whitesmoke;
}

.services .container .row .col {
    margin-bottom: 20px;
}

.navbar {
    z-index: 1;
    background-color: white;
}

@media only screen and (width: 375px) {
    .img{
        display: none;
    }

    .about-img {
        width: 350px;
        height: 350px;
    }

    .company-img {
        display: grid;
        place-items: center;
    }

    .services-grid {
        display: grid;
        place-items: center;
    }

    .container {
        display: flex;
        flex-direction: column;
        justify-content: center;
        align-items: center
    }
    .col-2 {
        display: none;
    }

    #illustration {
        display: none;
    }
    .form {
        display: none;
    }

    .text {
        text-align: center;
        font-size: 15vmin;
    }
    .hero-paragraph {
        font-size: 8vmin;
    }
}
@media only screen and (width: 414px) {
    .img{
        display: none;
    }
    .container {
        display: flex;
        flex-direction: column;
        justify-content: center;
        align-items: center
    }
    .col-2 {
        display: none;
    }

    #illustration {
        display: none;
    }
    .form {
        display: none;
    }

    .text {
        text-align: center;
        font-size: 15vmin;
    }

    .hero-paragraph {
        font-size: 8vmin;
    }
}
@media only screen and (width: 768px) {
    .img{
        display: none;
    }
    .container {
        display: flex;
        flex-direction: column;
        justify-content: center;
        align-items: center
    }
    .col-2 {
        display: none;
    }

    #illustration {
        display: none;
    }
    .form {
        display: none;
    }

    .text {
        text-align: center;
        font-size: 15vmin;
    }

    .hero-paragraph {
        font-size: 8vmin;
    }
}
@media only screen and (width: 360px) {
    .img{
        display: none;
    }
    .container {
        display: flex;
        flex-direction: column;
        justify-content: center;
        align-items: center
    }
    .col-2 {
        display: none;
    }

    #illustration {
        display: none;
    }

    .form {
        display: none;
    }

    .text {
        text-align: center;
        font-size: 15vmin;
    }

    .hero-paragraph {
        font-size: 8vmin;
    }

}


.hero-paragraph {
    font-weight: 400;
    font-size: 2vmin;
    color: black;
    opacity: .7;
}

.img {
    width: 70vmin;
    height: 50vmin;
}

.btn {
    background-color: #2A34A2;
    color: white;
    padding-left: 30px;
    padding-right: 30px;
    padding-top: 12px;
    padding-bottom: 12px;
}

.btn:hover {
    color: white;
}

